[package]
name = "api-shower"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web request & response
http = "0.2.9"
axum = {version = "0.6.18", features = ["macros"] }
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version="0.4.1", features=["full"] }
mime = "0.3.17"
once_cell = "1.8.0"

# data serialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.99"

# logging, debug
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.71"
thiserror = "1.0.40"

# validation
validator = { version = "0.16.1", features = ["derive"] }
dotenv = "0.15.0"

# database
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "macros"] }

